XMLHttpRequest: open() does not throw a SYNTAX_ERR exception if method is empty or url cannot be resolved https://bugs.webkit.org/show_bug.cgi?id=46008

Patch by Rob Buis <rbuis@igalia.com> on 2018-09-07
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/xhr/open-url-bogus-expected.txt:
* web-platform-tests/xhr/open-url-multi-window-6-expected.txt:

Source/WebCore:

Check if passed URL is valid as specified here [1].

Test: web-platform-tests/xhr/open-url-bogus.htm

[1] https://xhr.spec.whatwg.org/#the-open()-method Step 7

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::open):

Canonical link: https://commits.webkit.org/204398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235808 268f45cc-cd09-0410-ab3c-d52691b4dbfc